# deva_p1_back

./: .env.example  Dockerfile  Makefile  alembic.ini  config.py  pyproject.toml
back/: __main__.py  broker.py  config.py  get_auth.py  main.py  middleware.py  token.py
back/api/: __init__.py  auth.py  file.py  note.py  project.py  share.py  sse.py  task.py
back/api/project/: project.py  share.py
back/depends/: __init__.py  database.py  get_file.py  get_invited_user.py  get_note.py  get_project.py  get_user.py
back/exceptions/: __init__.py  base.py  s400.py  s401.py  s403.py  s404.py  s416.py  s500.py
back/schemas/: __init__.py  file.py  invited_user.py  note.py  project.py  task.py  user.py  websocket.py
back/websocket/: decorator.py  payload.py  start_polling.py
database/: database.py  db.py  minio.py  redis.py  s3.py
database/migrations/: env.py
database/migrations/versions/: 130f043a80c4_first_migration.py  197cb3b4dc24_first_migration.py  6ca2d84640d6_first_migration.py  8fddf723cd9c_first_migration.py  a01ac39f6942_first_migration.py  bf970c6243f3_first_migration.py  c27b98422ad8_first_migration.py  c34d8889debb_first_migration.py  eea52f5c5330_first_migration.py
database/models/: __init__.py  file.py  task.py  user.py
database/repositories/: __init__.py  file_repository.py  user_repository.py
