[project]
name = "deva-p1-back"
version = "0.1.0"
authors = [{ name = "w1vern", email = "bndvvl@gmail.com" }]
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
    "minio>=7.2.15",
    "faststream>=0.5.37",
    "fastapi-controllers>=0.3.0",
    "redis[asyncio]>=5.2.1",
    "types-redis>=4.6.0.20241004",
    "aio-pika>=9.5.5",
    "alembic>=1.15.2",
    "python-multipart>=0.0.20",
    "fastapi-sse>=1.1.1",
    "deva-p1-db",
]

[dependency-groups]
dev = ["isort>=6.0.1"]

[tool.uv.sources]
deva-p1-db = { git = "https://github.com/w1vern/deva_p1_db", branch="dev" }

